feat: add users feature - small fixes